3.26
	- Added 'delay' option to delay between requests

3.25
	- Added unit test for OAI_DC metadata() parsing
	- Metadata::OAI_DC now parses dc when passed as a DOM to ->metadata

3.24
	- Fixed CPAN bugs #60760 and #60856

3.23
	- Changed license to BSD
	- Added dependency for XML::SAX rt #43287
	- Fixed some POD issues rt #51853

3.22
	- use XML::SAX::Parser rather than ParserFactory
	- test the namespace on NamespaceURI rather than the XMLNS attribute, which
	  is reported differently between XML::LibXML::SAX and
	  XML::LibXML::SAX::Parser
	- added debug class HTTP::OAI::Debug
	- added check in 01parse test case for file open
	- added 000xml_sax.pl test case for basic XML::SAX function
	- added "trace" and "saxtrace" options to oai_browser.pl

3.21
	- added test case for bad characters
	- fix bad chars as they arrive, to avoid buffering an entire response if it
	  contains bad chars
	- some code cleanup

3.20
	- use strict UTF-8 (suggested by Dennis Vierkant)

3.19

3.18
	- broke apart Metadata from Encapsulation
	- now uses XML::SAX in Response, rt.cpan.org ticket #27191
	- shifted all use's into HTTP::OAI
	- added use strict(), use warnings() to every module
	- shifted $VERSION in HTTP::OAI
	- href attribute lookup in METS should be namespaced too
	- added mets test case
	- fixed test cases for changed XML output

3.17

	- Removed next() call from oai_browser for List*
	- Fixed missing HTTP:: in ListIdentifiers documentation
	- Fixed missing namespace initialization in SAX
	- Fixed bug in request where '?' wasn't being removed

3.16

  - Fixed recursion bug in onRecord
	- No longer need to call next() for onRecord (Harvester will do it for you)
	- Added PartialList module (ListIdentifiers, ListRecords, ListSets)

3.15

	- Several bug fixes, particularly catching and throwing parsing errors
	- Added onRecord argument to ListRecords, ListIdentifiers, ListSets
	- INCOMPATIBLE: Changed error handling, so now only need to check after the