@@ -14,7 +14,7 @@ WriteMakefile(
 				'Encode' => 2.12,
 				'XML::LibXML' => 1.60,
 				'XML::LibXML::SAX' => 0,
-				'XML::SAX::Base' => 1.00,
+				'XML::SAX::Base' => 1.04,
 				'XML::SAX' => 0,
 				'URI' => 0,
 				'HTTP::Request' => 0,
